// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationsColumnConfiguration component should render column "authoring_group": authoring_group 1`] = `<DocumentFragment />`;

exports[`CitationsColumnConfiguration component should render column "authors": authors 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Wang J.
    </li>
    <li>
      Liu S.J.
    </li>
    <li>
      Xiao J.
    </li>
  </ul>
</DocumentFragment>
`;

exports[`CitationsColumnConfiguration component should render column "doi": doi 1`] = `<DocumentFragment />`;

exports[`CitationsColumnConfiguration component should render column "first_page": first_page 1`] = `<DocumentFragment />`;

exports[`CitationsColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    class="no-wrap"
    href="/citations/CI-7TL41NBKJTRQJ"
  >
    CI-7TL41NBKJTRQJ
  </a>
</DocumentFragment>
`;

exports[`CitationsColumnConfiguration component should render column "journal": journal 1`] = `<DocumentFragment />`;

exports[`CitationsColumnConfiguration component should render column "last_page": last_page 1`] = `<DocumentFragment />`;

exports[`CitationsColumnConfiguration component should render column "lit_abstract": lit_abstract 1`] = `<DocumentFragment />`;

exports[`CitationsColumnConfiguration component should render column "publication_date": publication_date 1`] = `
<DocumentFragment>
  <time
    datetime="2007-12-01T00:00:00.000Z"
  >
    DEC-2007
  </time>
</DocumentFragment>
`;

exports[`CitationsColumnConfiguration component should render column "reference": reference 1`] = `
<DocumentFragment>
  <div
    class="tiny"
  >
    Submission
  </div>
   Submitted to EMBL/GenBank/DDBJ databases (
  <time
    datetime="2007-12-01T00:00:00.000Z"
  >
    DEC-2007
  </time>
  )
</DocumentFragment>
`;

exports[`CitationsColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28lit_citation_id%3ACI-7TL41NBKJTRQJ%29"
      >
        2 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28lit_citation_id%3ACI-7TL41NBKJTRQJ%29+AND+%28reviewed%3Afalse%29"
      >
        2 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`CitationsColumnConfiguration component should render column "title": title 1`] = `
<DocumentFragment>
  Nature gynogenetic fish.
</DocumentFragment>
`;

exports[`CitationsColumnConfiguration component should render column "volume": volume 1`] = `<DocumentFragment />`;
